--- a/two_operationsTests/TwoOperations.Tests.csproj
+++ b/two_operationsTests/TwoOperations.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\two operations\two operations.csproj" />
+    <ProjectReference Include="..\two operations\TwoOperations.csproj" />
   </ItemGroup>
 
 </Project>
